--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ layout: default
         <a href="{% link works.md %}">Works</a>&ensp;
         <a href="{% link about.md %}">About</a>&ensp;
         <a href="{% link links.md %}">Links</a>&ensp;
+        <a href="{% link contact.md %}">Contact</a>&ensp;
       </nav>
     </div>
   </div>
